[gd_scene load_steps=21 format=2]

[ext_resource path="res://Shaders/Scroll Left.shader" type="Shader" id=1]
[ext_resource path="res://Backgrounds/stars1.png" type="Texture" id=2]
[ext_resource path="res://Backgrounds/stars2.png" type="Texture" id=3]
[ext_resource path="res://Backgrounds/stars3.png" type="Texture" id=4]
[ext_resource path="res://Shaders/ScrollingBackground.gd" type="Script" id=5]
[ext_resource path="res://Backgrounds/Celestial Body Background.png" type="Texture" id=6]
[ext_resource path="res://Backgrounds/Background.gd" type="Script" id=7]
[ext_resource path="res://GUI/Planets/Chapter 5.png" type="Texture" id=8]
[ext_resource path="res://GUI/Planets/Chapter 2.png" type="Texture" id=9]
[ext_resource path="res://GUI/Planets/Chapter 3.png" type="Texture" id=10]
[ext_resource path="res://GUI/Planets/Chapter 6.png" type="Texture" id=11]
[ext_resource path="res://GUI/Planets/Chapter 4.png" type="Texture" id=12]
[ext_resource path="res://GUI/Planets/Chapter 1.png" type="Texture" id=13]
[ext_resource path="res://Backgrounds/Gradient.tres" type="Texture" id=14]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/scroll_speed = 0.1
shader_param/time = null

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 1 )
shader_param/scroll_speed = 0.2
shader_param/time = null

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/scroll_speed = 0.15
shader_param/time = null

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="Animation" id=6]
resource_name = "default"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Moon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 154 ), Vector2( 48, 154 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Ocean:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2, 2.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 79, 57 ), Vector2( 75, 57 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Lush:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 100, 229 ), Vector2( 102, 229 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D/Gas:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.3, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 455, 140 ), Vector2( 457, 140 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Position2D/Ice:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 435, 49 ), Vector2( 439, 49 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Position2D/Black Hole:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.9, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 421, 230 ), Vector2( 418, 230 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../BackgroundGradient:texture:gradient:colors")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ PoolColorArray( 0.105882, 0, 0.305882, 1, 0.00701284, 0.00134277, 0.0644531, 1, 0.0184668, 0, 0.0533485, 1, 0, 0, 0, 1 ), PoolColorArray( 0.305882, 0, 0, 1, 0.0980392, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "default"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("../BackgroundPlanets:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.329877, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BackgroundGradient:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.757858, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Background" type="ParallaxBackground"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 288.0
color = Color( 0, 0, 0, 1 )

[node name="Stars 1" type="TextureRect" parent="."]
material = SubResource( 1 )
margin_right = 512.0
margin_bottom = 288.0
texture = ExtResource( 2 )
stretch_mode = 2
script = ExtResource( 5 )
scroll_speed = 0.075

[node name="BackgroundPlanets" type="Node2D" parent="."]
position = Vector2( 256, 144 )
scale = Vector2( 1e-05, 1e-05 )

[node name="Position2D" type="Position2D" parent="BackgroundPlanets"]
position = Vector2( -256, -144 )

[node name="Moon" type="Sprite" parent="BackgroundPlanets/Position2D"]
position = Vector2( 50, 154 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="Ocean" type="Sprite" parent="BackgroundPlanets/Position2D"]
position = Vector2( 75.8, 57 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Lush" type="Sprite" parent="BackgroundPlanets/Position2D"]
position = Vector2( 100.667, 229 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Gas" type="Sprite" parent="BackgroundPlanets/Position2D"]
position = Vector2( 456.733, 140 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="Ice" type="Sprite" parent="BackgroundPlanets/Position2D"]
position = Vector2( 435.533, 49 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Black Hole" type="Sprite" parent="BackgroundPlanets/Position2D"]
position = Vector2( 419.2, 230 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Stars 2" type="TextureRect" parent="."]
material = SubResource( 3 )
margin_right = 1024.0
margin_bottom = 576.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
script = ExtResource( 5 )
scroll_speed = 0.25

[node name="Stars 3" type="TextureRect" parent="."]
material = SubResource( 2 )
margin_right = 512.0
margin_bottom = 288.0
texture = ExtResource( 3 )
stretch_mode = 2
script = ExtResource( 5 )
scroll_speed = 0.2

[node name="Planet" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )

[node name="BackgroundGradient" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 4 )
margin_right = 512.0
margin_bottom = 288.0
texture = ExtResource( 14 )

[node name="BackgroundAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../BackgroundPlanets")
autoplay = "default"
playback_speed = 0.75
anims/default = SubResource( 6 )

[node name="Transition" type="AnimationPlayer" parent="."]
root_node = NodePath("../BackgroundAnimator")
anims/default = SubResource( 7 )
